--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,42 @@
-Package         Version
---------------- -----------
-apipkg          1.5
-atomicwrites    1.4.0
-attrs           20.3.0
-certifi         2020.11.8
-chardet         3.0.4
-colorama        0.4.4
-contextlib2     0.6.0.post1
-dill            0.3.3
-execnet         1.7.1
-h5py            2.10.0
-idna            2.10
-iniconfig       1.1.1
-mock            4.0.2
-numexpr         2.7.1
-numpy           1.19.3
-packaging       20.4
-pandas          1.1.4
-path            15.0.0
-path.py         12.5.0
-pip             20.2.4
-pluggy          0.13.1
-py              1.9.0
-py4j            0.10.9
-pyparsing       2.4.7
-pyspark         3.0.1
-pyspark-stubs   3.0.0.post1
-pytest          6.1.2
-pytest-shutil   1.7.0
-python-dateutil 2.8.1
-pytz            2020.4
-requests        2.25.0
-setuptools      50.3.2
-six             1.15.0
-stats-can       2.3.5
-tables          3.6.1
-termcolor       1.1.0
-toml            0.10.2
-tqdm            4.53.0
-urllib3         1.26.2
+apipkg==1.5
+atomicwrites==1.4.0
+attrs==20.3.0
+boto3==1.16.34
+botocore==1.19.34
+certifi==2020.11.8
+chardet==3.0.4
+colorama==0.4.4
+contextlib2==0.6.0.post1
+dill==0.3.3
+execnet==1.7.1
+h5py==2.10.0
+idna==2.10
+iniconfig==1.1.1
+jmespath==0.10.0
+mock==4.0.2
+multiprocess==0.70.11.1
+numexpr==2.7.1
+numpy==1.19.3
+packaging==20.4
+pandas==1.1.4
+path==15.0.0
+path.py==12.5.0
+pluggy==0.13.1
+py==1.9.0
+py4j==0.10.9
+pyparsing==2.4.7
+pyspark==3.0.1
+pyspark-stubs==3.0.0.post1
+pytest==6.1.2
+pytest-shutil==1.7.0
+python-dateutil==2.8.1
+pytz==2020.4
+requests==2.25.0
+s3transfer==0.3.3
+six==1.15.0
+stats-can==2.3.5
+tables==3.6.1
+termcolor==1.1.0
+toml==0.10.2
+tqdm==4.53.0
+urllib3==1.26.2
